# wdl-be-core

./: .dockerignore  .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 20260723_0001_initial_engine_schema.py
src/wdl_be_core/: __init__.py  main.py
src/wdl_be_core/application/: repositories.py  unit_of_work.py  use_cases.py
src/wdl_be_core/application/services/: __init__.py  realm.py
src/wdl_be_core/domain/: __init__.py  exceptions.py  value_objects.py
src/wdl_be_core/domain/entities/: __init__.py  base.py  realm.py
src/wdl_be_core/domain/repositories/: __init__.py  realm.py
src/wdl_be_core/infrastructure/: __init__.py  config.py  cors.py
src/wdl_be_core/infrastructure/database/: base.py  session.py  unit_of_work.py
src/wdl_be_core/infrastructure/database/models/: __init__.py  canvas.py  database.py  mixins.py  projects.py  realms.py
src/wdl_be_core/infrastructure/database/repositories/: __init__.py  realms.py
src/wdl_be_core/presentation/api/: errors.py  router.py
src/wdl_be_core/presentation/api/dependencies/: __init__.py  database.py  realm.py
src/wdl_be_core/presentation/api/routers/: __init__.py  canvas.py  crud.py  database.py  projects.py  realm.py  relationships.py
src/wdl_be_core/presentation/api/swagger/: docs.py  openapi.py  swagger.py
tests/: test_database_models.py  test_diagram_routes.py  test_health.py  test_realm_use_cases.py
