[project]
name = "wdl-be-core"
version = "0.1.0"
description = "Core API for Wetymov Data Lab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.116,<1",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy[asyncio]>=2.0.41,<3",
    "uvicorn[standard]>=0.35,<1",
    "wdl-shared @ git+https://github.com/Wetymov-Data-Lab/wdl-shared.git@main",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "mypy>=1.17,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
]

[tool.uv.sources]
wdl-shared = { path = "../wdl-shared", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wdl_be_core"]

[tool.hatch.metadata]
allow-direct-references = true
